--- a/presentations/GDSG_slides/gmsg.Rmd
+++ b/presentations/GDSG_slides/gmsg.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Gradient Methods for Solving Stackelberg Games"
-subtitle: "SAMSI"
-author: "Roi Naveiro and David Ríos"
-date: "roi.naveiro@icmat.es | Inst. of Mathematical Sciences (ICMAT-CSIC)"
+author: "Roi Naveiro"
+date: "roi.naveiro@icmat.es | Inst. of Mathematical Sciences (ICMAT-CSIC). Madrid (Spain) and Duke University."
 output:
   xaringan::moon_reader:
     css: [metropolis, metropolis-fonts]
@@ -15,9 +14,85 @@ output:
 
 ---
 
+# Motivation - Adversarial Regression
+
+* $R_J$ and $R_D$ are two competing wine brands.
+
+* $R_D$ has a system to automatically measure wine quality training a regression over some quality indicators. (Response value: wine quality, Covariates: quality indicators).
+
+* $R_J$, aware of the actual superiority of its competitor's wines, decides to **hack** $R_D$'s system by manipulating the value of several quality indicators **at operation time**, to artificially decrease $R_D$'s quality rates. 
+<center>
+![:scale 60%](./img/vinos.jpg)
+</center>
+
+---
+
+# Motivation - Adversarial Regression
+
+* $R_D$ is **aware** of the possibility of being hacked and decides to train its regression in an **adversarial robust** manner.
+
+* $R_D$ models this **conflict** as a game between a *learner* $(R_D)$ and a *data generator* $(R_J)$. (Brückner and Scheffer, 2011).
+
+* The *data generator* tries to fool the learner **modifying input data at application time**, inducing a change between the data distribution at training $[p(x,y)]$ and test $[\bar{p}(x,y)]$ times. 
+
+---
+
+# The Learner Problem
+
+* Given a feature vector $x \in \mathbb{R}^p$ and target $y \in \mathbb{R}$, the learner's decision is to choose the weight vector of a linear model $f_w(x) = x^\top w$, minimizing **theoretical costs at application time**
+
+\begin{eqnarray*}
+\theta_l (w, \bar{p}, c_l) = \int c_l(x,y) (f_w(x) - y)^2 \mathop{}\! \mathrm{d} \bar{p}(x,y),
+\end{eqnarray*}
+
+* To do so, the learner has a training matrix $X \in \mathbb{R}^{n\times p}$ and a vector of target values $y\in \mathbb{R}^n$ (a sample from distribution $p(x,y)$ at training time).
+
+---
+
+# The Data Generator Problem
+
+* The data generator aims at **changing features of test instances** to induce a transformation from $p(x,y)$ to $\bar{p}(x,y)$. 
+
+* $z(x,y)$ is the data generator's target value for instance $x$ with real value $y$
+
+* The data generator aims at **choosing the data transformation** that minimizes the theoretical costs given by
+
+\begin{eqnarray*}
+\theta_d (w, \bar{p}, c_d) = \int c_d(x,y) (f_w(x) - z(x,y))^2 \mathop{}\! \mathrm{d} \bar{p}(x,y) + \Omega_d(p,\bar{p})
+\end{eqnarray*}
 
 
-# The problem
+---
+
+# Regularized Empirical Costs
+
+* Theoretical costs defined above depend on the unknown distributions $p$ and $\bar{p}$.
+
+* We focus on their regularized empirical counterparts, given by
+
+\begin{eqnarray*}
+\widehat{\theta}_l(w, \bar{X}, c_l) &=& \sum_{i=1}^n c_{l,i} (f_w(\bar{x}_i) - y_i)^2 + \Omega_l(f_w),\\
+\widehat{\theta}_d(w, \bar{X}, c_d) &=& \sum_{i=1}^n c_{d,i} (f_w(\bar{x}_i) - z_i)^2 + \Omega_d(X, \bar{X}).
+\end{eqnarray*}
+
+
+---
+# Resulting Stackelberg Game
+
+* We assume the learner acts first, choosing a weight vector $w$. Then the data generator, after observing $w$, chooses his optimal data transformation.
+
+<br/>
+<br/>
+
+<center>
+![:scale 80%](./img/ar4.png)
+</center>
+
+
+---
+
+# The general problem
+
 Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after observing $\alpha$, makes decision $\beta \in \mathbb{R}^m$
 <br/>
 <br/>
@@ -28,9 +103,9 @@ Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after obser
 
 * Many problems formulated this way (not just Stackelberg Games!)
 
-* Our interest is in Stackelberg Games arising in AML.
+* Our interest is in Algorithmic methods for solving **Stackelberg Games arising in Adversarial Machine Learning** (AML).
 
-* In classical games, decision spaces are small. In AML, $\alpha$ and $\beta$ usually **high dimensional** and **continuous** (e.g. weights of a NN).
+* In classical games, decision spaces are small. In AML, $\alpha$ and $\beta$ usually **high dimensional** and **continuous**.
 ---
 
 # Gradient Methods 
@@ -50,7 +125,7 @@ Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after obser
 
 # Backward Solution
 
-* Under **certain conditions**, we can approximate our problem by
+* Under **certain conditions** (Bottou, 1998), we can approximate our problem by
 <br/>
 <br/>
 <center>
@@ -59,11 +134,13 @@ Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after obser
 
 * Where $T \gg 1$.
 
+* $\lim_{t \rightarrow \infty} \beta(\alpha, t) = \beta^*(\alpha)$.
+
 * Let's try to solve this problem instead.
 ---
 # Backward Solution
 
-* It can be proved that
+* It can be proved that (Naveiro and Ríos, 2019)
 <br/>
 <center>
 ![:scale 80%](./img/eq4.png)
@@ -76,12 +153,14 @@ Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after obser
 ![:scale 50%](./img/adeq.png)
 </center>
 
+* With initial conditions $\lambda(T) = - \partial_\beta u_D(\alpha, \beta)$.
+
 
 ---
 # Backward Solution
 
 <center>
-![:scale 100%](./img/Backwd.png)
+![:scale 100%](./img/bwd.png)
 </center>
 ---
 # Backward Solution - Complexity Analysis
@@ -118,6 +197,8 @@ Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after obser
 </center>
 
 * Again, $T \gg 1$.
+
+* $\lim_{t \rightarrow \infty} \beta_t(\alpha) = \beta^*(\alpha)$.
 
 ---
 
@@ -177,129 +258,56 @@ Defender (D) makes decision $\alpha \in \mathbb{R}^n$. Attacker (A), after obser
 
 # Conceptual Example
 
-* Attacker's utility is $u_A(\alpha, \beta) = -\sum_{i=1}^n 3(\beta_i - \alpha_j)^2$ and the defender's one is $u_D(\alpha, \beta) = -\sum_{i=1}^n (7 \alpha_i + \beta_j^2)$.
+* Attacker's utility is $u_A(\alpha, \beta) = -\sum_{i=1}^n 3(\beta_i - \alpha_i)^2$ and the defender's one is $u_D(\alpha, \beta) = -\sum_{i=1}^n (7 \alpha_i + \beta_i^2)$.
 
+* $\mathcal{O}(T \tau(m,n))$ vs $\mathcal{O}(mT \tau(m,n))$.
 <center>
 ![:scale 80%](./img/time_comp.png)
 </center>
 
 ---
-# Adversarial Regression
 
-* $R_J$ and $R_D$ are two competing wine brands.
+# Application - Adversarial Regression
 
-* $R_D$ has a system to automatically measure wine quality training a regression over some quality indicators. (Response value: wine quality, Covariates: quality indicators).
+* We compare ridge regression versus *adversarial robust regression* in the wine problem.
 
-* $R_J$, aware of the actual superiority of its competitor's wines, decides to hack $R_D$'s system by manipulating the value of several quality indicators, to artificially decrease $R_D$'s quality rates. 
-<center>
-![:scale 60%](./img/vinos.jpg)
-</center>
+* For ridge regression, we compute the weights in the usual way, and test them in data attacked using those weights.
 
----
-
-# Application to AML - Adversarial Regression
-* $R_D$ is aware of the possibility of being hacked and decides to train its regression in an **adversarial robust** manner.
-
-*  $R_D$ models the situation as a game between a *learner* and a *data generator*.
-
-* The *data generator* tries to fool the learner modifying input data at application time, inducing
-a change between the data distribution at training and test times.
-
---
-
-* Given a feature vector $x \in \mathbb{R}^p$ and target $y \in \mathbb{R}$, the learner's decision is to choose the weight vector of a linear model $f_w(x) = x^\top w$, minimizing **theoretical costs at application time**
-
-\begin{eqnarray*}
-\theta_l (w, \bar{p}, c_l) = \int c_l(x,y) (f_w(x) - y)^2 \mathop{}\! \mathrm{d} \bar{p}(x,y),
-\end{eqnarray*}
-
-* To do so, the learner has a training matrix $X \in \mathbb{R}^{n\times p}$ and a vector of target values $y\in \mathbb{R}^n$ (a sample from distribution $p(x,y)$ at training time).
-
----
-
-# Application to AML - Adversarial Regression
-
-* The data generator aims at changing features of test instances to induce a transformation from $p(x,y)$ to $\bar{p}(x,y)$. 
-
-* $z(x,y)$ is the data generator's target value for instance $x$ with real value $y$
-
-* The data generator aims at choosing the transformation that minimizes the theoretical costs given by
-
-\begin{eqnarray*}
-\theta_d (w, \bar{p}, c_d) = \int c_d(x,y) (f_w(x) - z(x,y))^2 \mathop{}\! \mathrm{d} \bar{p}(x,y) + \Omega_d(p,\bar{p})
-\end{eqnarray*}
-
-
----
-
-# Application to AML - Adversarial Regression
-
-* Theoretical costs defined above depend on the unknown distributions $p$ and $\bar{p}$.
-
-* We focus on their regularized empirical counterparts, given by
-
-\begin{eqnarray*}
-\widehat{\theta}_l(w, \bar{X}, c_l) &=& \sum_{i=1}^n c_{l,i} (f_w(\bar{x}_i) - y_i)^2 + \Omega_l(f_w),\\
-\widehat{\theta}_d(w, \bar{X}, c_d) &=& \sum_{i=1}^n c_{d,i} (f_w(\bar{x}_i) - z_i)^2 + \Omega_d(X, \bar{X}).
-\end{eqnarray*}
-
-
----
-# Application to AML - Adversarial Regression
-
-* We assume the learner acts first, choosing a weight vector $w$. Then the data generator, after observing $w$, chooses his optimal data transformation.
-
-<br/>
-<br/>
+* For *adversarial robust regression* we compute the weights solving
 
 <center>
 ![:scale 80%](./img/ar4.png)
 </center>
+and test them in data attacked using those weights.
 
+* Note the dimension of the attacker's decision space is huge! He needs to modify $k=3263$ data points each with $n=11$ components!
 ---
 
 # Adversarial Regression
 
+<br/>
+
 <center>
-![:scale 75%](./img/rmse_vs_cw1.png)
+![:scale 80%](./img/rmse_vs_cw1.png)
 </center>
 
-* Note the dimension of the attacker's decision space is huge! He needs to modify $k=3263$ data points each with  $n=11$ components!
-
 ---
 
-# Conclusions
+# Conclusions and future work
 
-<br/>
-<br/>
-<br/>
+* New algorithmic method able to solve **huge Stackelberg Games** (dimension of decision sets of the order of $10^4$).
 
-* Two solution methods: forward and backward.
+* Could be implemented in any **Automatic Differentiation** library (Pytorch, tensorflow...).
 
-* Forward scales well in space, backward scales well in time.
+* Novel derivation of the backward solution formulating the Stackelberg game as a PDE-constrained optimization problem.
 
-* We are able to solve **huge Stackelberg Games** (thousands of decisions).
+--
 
-* Could be implemented in any Automatic Differentiation library (Pytorch, tensorflow...)
+* Application to games with uncertain outcomes.
 
-* **Novel** derivation of the backward solution formulating the Stackelberg game as a PDE-constrained optimization problem.
-
----
-
-# Future work
-
-<br/>
-<br/>
-<br/>
-
-* Games with uncertainty, i.e. $\Psi_D(\alpha, \beta) = \int u_D(\alpha, \theta) p(\theta \vert \alpha, \beta) \mathop{}\! \mathrm{d}  \theta$ and $\Psi_A(\alpha, \beta) = \int u_A(\beta, \theta) p(\theta \vert \alpha, \beta) \mathop{}\! \mathrm{d}  \theta$.
-
-* Bayesian Stackelberg Games? I model my uncertainty about Attacker's utility using $u_A(\alpha, \beta, \tau)$ and optimize $\int u_A(\alpha, \beta, \tau) p(\tau) \mathop{}\! \mathrm{d}  \tau$.
-
-* ARA? 
+* Application to Bayesian Stackelberg Games and ARA.
 
 * Several attackers?
-
 
 ---
 
@@ -308,6 +316,8 @@ class: middle, center, inverse
 # Thank you!!
 
 <span style="color:cyan">roi.naveiro@icmat.es</span>
+
+<span style="color:cyan">www.github.com/roinaveiro/GM_SG</span>
 
 
 
