--- a/presentations/GDSG_slides/gmsg.Rmd
+++ b/presentations/GDSG_slides/gmsg.Rmd
@@ -66,7 +66,7 @@ output:
 
 # Regularized Empirical Costs
 
-* Theoretical costs defined above depend on the unknown distributions $p$ and $\bar{p}$.
+* This theoretical costs depend on the unknown distributions $p$ and $\bar{p}$.
 
 * We focus on their regularized empirical counterparts, given by
 
