--- a/_publications/2019-acra.md
+++ b/_publications/2019-acra.md
@@ -5,6 +5,6 @@ permalink: /publication/2019-acra
 excerpt: 
 date: 2019-04-01
 venue: 'International Journal of Approximate Reasoning'
-paperurl: 'https://www.sciencedirect.com/science/article/abs/pii/S0888613X18304705'
-#citation: 'Berry, L.R., Helman, P., West, M. &quot;Probabilistic forecasting of heterogeneous consumer transaction-sales time series.&quot; 2020. <i>International Journal of Forecasting</i>.'
+paperurl: 'https://arxiv.org/abs/1802.07513v2'
+#citation: 'Author &quot; Title.&quot; 2020. <i>Journal</i>.'
 ---
