--- a/_publications/2019-rl.md
+++ b/_publications/2019-rl.md
@@ -1,5 +1,5 @@
 ---
-title: "Reinforcement Learning under Treats"
+title: "Reinforcement Learning under Threats"
 collection: publications
 permalink: /publication/2019-rl
 excerpt: 
