--- a/_teaching/2020_INE.md
+++ b/_teaching/2020_INE.md
@@ -4,7 +4,7 @@ collection: teaching
 type: "Course"
 permalink: /teaching/2020_INE
 venue: "National Statistics Institute"
-date: 2019
+date: 01-01-2019
 location: "Madrid, Spain"
 ---
 
