--- a/_posts/2021-06-07-talk-chem.md
+++ b/_posts/2021-06-07-talk-chem.md
@@ -1,5 +1,5 @@
 ---
-title: Welcome!
+title: AI in the discovery of intelligent materials
 date: 2021-06-07
 # image: /img/hello_world.jpeg
 permalink: /posts/2021/07/talk/
