--- a/_posts/2022-03-22-talk-MLMD.md
+++ b/_posts/2022-03-22-talk-MLMD.md
@@ -9,5 +9,5 @@ permalink: /posts/2022/03/talk/
 #  - code
 ---
 
-Will talk about molecules at [https://lifehub.csic.es/evento/matematicas-de-la-materia-viva/](*Matemáticas de la matera viva*) workshop.
-Slides available [/files/MLMD.pdf](here).
+Will talk about molecules at [*Matemáticas de la matera viva*](https://lifehub.csic.es/evento/matematicas-de-la-materia-viva/) workshop.
+Slides available [here](/files/MLMD.pdf).
