--- a/_posts/2022-03-22-talk-MLMD.md
+++ b/_posts/2022-03-22-talk-MLMD.md
@@ -12,3 +12,19 @@ permalink: /posts/2022/03/talk/
 Will talk about molecules at [*Matemáticas de la matera viva*](https://lifehub.csic.es/evento/matematicas-de-la-materia-viva/) workshop.
 Slides available [here](/files/MLMD.pdf).
 
+
+
+---
+title: New Machine Learning for de novo molecular design
+date: 2022-03-23
+# image: /img/hello_world.jpeg
+permalink: /posts/2022/03/talk/
+#tags:
+#  - Bayesian
+#  - forecasting
+#  - code
+---
+
+Will talk about molecules at [*Matemáticas de la matera viva*](https://lifehub.csic.es/evento/matematicas-de-la-materia-viva/) workshop.
+Slides available [here](/files/MLMD.pdf).
+
