--- a/_posts/2022-03-22-talk-MLMD.md
+++ b/_posts/2022-03-22-talk-MLMD.md
@@ -10,21 +10,5 @@ permalink: /posts/2022/03/talk/
 ---
 
 Will talk about molecules at [*Matemáticas de la matera viva*](https://lifehub.csic.es/evento/matematicas-de-la-materia-viva/) workshop.
-Slides available [here](/files/MLMD.pdf).
-
-
-
----
-title: New Machine Learning for de novo molecular design
-date: 2022-03-23
-# image: /img/hello_world.jpeg
-permalink: /posts/2022/03/talk/
-#tags:
-#  - Bayesian
-#  - forecasting
-#  - code
----
-
-Will talk about molecules at [*Matemáticas de la matera viva*](https://lifehub.csic.es/evento/matematicas-de-la-materia-viva/) workshop.
-Slides available [here](/files/MLMD.pdf).
+Slides available [here](/files/MLMD.pdf). See you there!
 
