--- a/_posts/2022-03-31-talk-seio2022.md
+++ b/_posts/2022-03-31-talk-seio2022.md
@@ -1,5 +1,5 @@
 ---
-title: Adversarial Machine Learning. Bayesian Perspectives
+title: Machine Learning for molecular design. A case study in dispersants desing.
 date: 2022-06-08
 # image: /img/hello_world.jpeg
 permalink: /posts/2022/06/talk/
