--- a/_posts/2022-06-24-talk-ada2022 .md
+++ b/_posts/2022-06-24-talk-ada2022 .md
@@ -3,9 +3,9 @@ title: Augmented Probability Simulation for solving Sequential games.
 date: 2022-06-24
 # image: /img/hello_world.jpeg
 permalink: /posts/2022/07/talk/
-#tags:
-#  - Bayesian
-#  - forecasting
+tags:
+  - Simulation based optimization
+  - Game Theory
 #  - code
 ---
 
