--- a/_posts/2022-06-24-talk-ada2022 .md
+++ b/_posts/2022-06-24-talk-ada2022 .md
@@ -9,4 +9,4 @@ tags:
 #  - code
 ---
 
-Will talk at ADA 2022 in D.C. about augmented probability simulations in game theory. Slides available [here](/files/aps.html).
+I'll be talking at ADA 2022 in D.C. about augmented probability simulations in game theory. Slides available [here](/files/aps.html).
