--- a/_posts/2022-06-21-talk-ada2022.md
+++ b/_posts/2022-06-21-talk-ada2022.md
@@ -1,6 +1,6 @@
 ---
 title: Augmented Probability Simulation for solving Sequential games.
-date: 2022-06-21
+date: 2022-06-22
 # image: /img/hello_world.jpeg
 permalink: /posts/2022/06/talk/
 #tags:
@@ -9,4 +9,4 @@ permalink: /posts/2022/06/talk/
 #  - code
 ---
 
-I will talk at ADA 2022 in D.C. about augmented probability simulations in game theory. Slides available [here](/files/aps.pdf).
+I'll talk at ADA 2022 in D.C. about augmented probability simulations in game theory. Slides available [here](/files/aps.pdf).
