--- a/_teaching/2023_ml4md.md
+++ b/_teaching/2023_ml4md.md
@@ -1,8 +1,8 @@
 ---
-title: "Data Analysis"
+title: "Machine Learning for Molecular Design"
 collection: teaching
-type: "Undergraduate course"
-permalink: /teaching/2022_DA
+type: "Graduate course"
+permalink: /teaching/2023_ml4md
 venue: "CUNEF University"
 date: 01-01-2023
 location: "Madrid, Spain"
