--- a/_teaching/2023_ml4md.md
+++ b/_teaching/2023_ml4md.md
@@ -1,9 +1,9 @@
 ---
 title: "Machine Learning for Molecular Design"
 collection: teaching
-type: "Graduate course"
+type: "Course"
 permalink: /teaching/2023_ml4md
-venue: "CUNEF University"
+venue: "Repsol Technology Lab"
 date: 01-01-2023
 location: "Madrid, Spain"
 ---
