--- a/_teaching/2022_DA.md
+++ b/_teaching/2022_DA.md
@@ -8,5 +8,5 @@ date: 01-01-2023
 location: "Madrid, Spain"
 ---
 
-I taught and introductory course on Data Science to undergraduates on economics and computer science during the fall semesters of years 2023.
+I taught an introductory course on Data Science to undergraduates on economics and computer science during the fall semesters of years 2022 and 2023.
 All the material (in spanish) is available [here](https://roinaveiro.github.io/CU-analisis-datos)!
